# latent-calendar

./: .pre-commit-config.yaml  404.html  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/: release.yml
.github/workflows/: bot-prs.yml  coverage.yml  docs.yml  pr-sync-labels.yml  publish.yml  tests.yml
docs/: draft.md  index.md  try-it-out.md  try-it-out.py
docs/examples/: cal-attribute.md  folium-integration.md  generation-process.md
docs/examples/datasets/: bikes-in-chicago.md  store-transactions.md  ufo-sightings.md
docs/modules/: html.md
docs/modules/integrations/: folium.md
draft/: index.html
examples/cal-attribute/: index.html
examples/create-segments/: index.html
examples/datasets/bikes-in-chicago/: index.html
examples/datasets/store-transactions/: index.html
examples/datasets/ufo-sightings/: index.html
examples/folium-integration/: index.html
examples/generation-process/: index.html
examples/model/sklearn-compat/: index.html
examples/plotting/add-calendar-events/: index.html
examples/plotting/calendar-customization/: index.html
examples/plotting/event-frequency/: index.html
examples/plotting/pandas-methods/: index.html
latent_calendar/: __init__.py  extensions.py  generate.py  html.py  transformers.py
latent_calendar/integrations/: __init__.py  folium.py
latent_calendar/model/: latent_calendar.py
latent_calendar/plot/: elements.py
latent_calendar/plot/core/: calendar.py
latent_calendar/segments/: convolution.py  hand_picked.py
methodology/: index.html
modules/const/: index.html
modules/datasets/: index.html
modules/extensions/: index.html
modules/generate/: index.html
modules/html/: index.html
modules/integrations/folium/: index.html
modules/model/: index.html
modules/plot/: index.html
modules/plot/colors/: index.html
modules/plot/config/: index.html
modules/plot/core/: index.html
modules/plot/elements/: index.html
modules/plot/grid_settings/: index.html
modules/plot/iterate/: index.html
modules/segments/: index.html
modules/transformers/: index.html
modules/vocab/: index.html
scripts/: generate_generation_process_images.py
scripts/pymc-slides/: requirements.txt
search/: search_index.json
tests/: test_datasets.py  test_extensions.py  test_generate.py  test_html.py  test_transformers.py
tests/integrations/: __init__.py  test_folium.py
tests/plot/: test_iterate.py
tests/segments/: test_hand_picked.py
